<resources>
    <string name="app_name">Manoeuvres</string>
    <string name="facebook_app_id">203446693409527</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="button_text_unfollow">Unfollow</string>
    <string name="button_text_remove">Remove</string>
    <string name="button_text_follow">Follow</string>
    <string name="button_text_accept">Accept</string>
    <string name="button_text_cancel_request">Cancel request</string>
    <string name="button_text_network_error">Network Error</string>
    <string name="button_text_following">Following…</string>
    <string name="button_text_cancelling">Cancelling…</string>
    <string name="button_text_accepting">Accepting…</string>
    <string name="button_text_unfollowing">Unfollowing…</string>
    <string name="button_text_removing">Removing…</string>
    <string name="button_text_loading">Loading…</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main_followers">Followers</string>
    <string name="title_activity_main_following">Following</string>
    <string name="title_activity_main_find_friends">Find Friends</string>
    <string name="title_activity_main_requests">Requests</string>

    <string name="title_alert_dialog_select_move">Select a move to share</string>
    <string name="button_text_alert_dialog_negative">Cancel</string>

    <string name="move_drive_name">Drive</string>
    <string name="move_drive_present">Driving</string>
    <string name="move_drive_past">Drove</string>
    <string name="move_eat_name">Eat</string>
    <string name="move_eat_present">Eating</string>
    <string name="move_eat_past">Ate</string>
    <string name="move_relax_name">Relax</string>
    <string name="move_relax_present">Relaxing</string>
    <string name="move_relax_past">Relaxed</string>
    <string name="move_sleep_name">Sleep</string>
    <string name="move_sleep_present">Sleeping</string>
    <string name="move_sleep_past">Slept</string>
    <string name="move_study_name">Study</string>
    <string name="move_study_present">Studying</string>
    <string name="move_study_past">Studied</string>
    <string name="move_work_name">Work</string>
    <string name="move_work_present">Working</string>
    <string name="move_work_past">Worked</string>

    <string name="nav_menu_timeline">Timeline</string>
    <string name="nav_menu_followers">Followers</string>
    <string name="nav_menu_following">Following</string>
    <string name="nav_menu_find_friends">Find friends</string>
    <string name="nav_menu_requests">Requests</string>
    <string name="nav_menu_log_out">Log out</string>

    <string name="log_sub_title_text_present">since %1$s</string>
    <string name="log_sub_title_text_past">for %1$s</string>

    <string name="textview_loading_logs">Getting %1$s moves</string>
    <string name="textview_loading_friends">Getting your %1$s</string>
    <string name="textview_loading_following">Getting the friends you\'re following</string>

    <string name="text_loading_friends_followers">followers</string>
    <string name="text_loading_friends_find_friends">friends</string>
    <string name="text_loading_friends_requests">requests</string>
    <string name="text_loading_logs_your">your</string>

    <string name="snackbar_no_internet">No internet connection</string>
    <string name="login_no_internet">Waiting for network…</string>

    <string name="notification_text_new_request">Hi, I would like to follow you!</string>
    <string name="notification_text_request_accepted">Sure! you can follow me :)</string>
    <string name="notification_text_log_present">"I'm "</string>
    <string name="notification_text_log_past">"I "</string>
    <string name="image_description_profile_picture">Your Facebook profile picture.</string>

    <string name="duration_one_day">"1 day, "</string>
    <string name="duration_days">" days, "</string>
    <string name="duration_one_hour">"1 hour and "</string>
    <string name="duration_hours">" hours and "</string>
    <string name="duration_less_than_a_minute">less than a minute</string>
    <string name="duration_minute">a minute</string>
    <string name="duration_minutes">" minutes "</string>

    <string name="no_logs_user">Tap the share button to start a move!</string>
    <string name="no_logs_friend">%1$s hasn\'t shared anything yet. :(</string>
    <string name="no_followers">Not so popular, eh?</string>
    <string name="no_following">You can always find new friends from the \"Find friends\" tab. :)</string>
    <string name="no_friends">None of your friends are using Manoeuvres, would you spread the word for us? 0:)</string>
    <string name="no_new_friends">You\'re already following all of your Facebook friends. That\'s the spirit!</string>
    <string name="no_requests">Don\'t worry, we\'ll notify you when you\'ll have a request. :)</string>

    <string name="loading_login_check_account">Checking for previous accounts…</string>
    <string name="loading_login_authenticate_facebook">Authenticating with Facebook…</string>
    <string name="loading_login_authenticate_firebase">Authenticating with our servers…</string>
    <string name="loading_login_account_exists">Account exists, welcome back!</string>
    <string name="loading_login_creating_account">Creating account…</string>
    <string name="loading_login_account_created">Account created, welcome!</string>

</resources>
