<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_timelines"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:orderInCategory="1"
            android:title="@string/nav_menu_timeline" />
    </group>

    <group
        android:id="@+id/nav_group_profile"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_followers"
            android:icon="@drawable/ic_group_black_24dp"
            android:orderInCategory="2"
            android:title="@string/nav_menu_followers" />
        <item
            android:id="@+id/nav_following"
            android:icon="@drawable/ic_group_black_24dp"
            android:orderInCategory="2"
            android:title="@string/nav_menu_following" />
        <item
            android:id="@+id/nav_find_friends"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:orderInCategory="2"
            android:title="@string/nav_menu_find_friends" />
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:orderInCategory="2"
            android:title="@string/nav_menu_requests" />

    </group>

    <item
        android:id="@+id/nav_log_out"
        android:icon="@drawable/ic_lock_black_24dp"
        android:orderInCategory="3"
        android:title="@string/nav_menu_log_out" />

</menu>
